# claude-ops

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  REVIEW.md  TMUX-OPS.md  control-plane.conf  defaults.json  fleet-relay.ts  install.sh  package.json
bus/: schema.json
cli/: index.ts
commands/: complex-verification.md  standby.md
completions/: _fleet  fleet.zsh
config/: tmux.conf
docs/: architecture.md  event-bus.md  getting-started.md  hooks.md  soft-optimization.md
dotfiles/: Brewfile  DEPENDENCIES.md
engine/: hook-engine.sh  hook-engine.ts  session-logger.sh
extensions/watchdog-rs/: Cargo.toml  manifest.json
extensions/watchdog-rs/src/: checker.rs  config.rs  install.rs  main.rs  plugin.rs  tmux.rs  worker.rs
extensions/watchdog-rs/src/plugins/: liveness.rs  mod.rs  unread_mail.rs
extensions/watchdog-rs/tests/: checker_test.rs
harness/: harness-launch.sh
hooks/: harness-dispatch.sh  manifest.json  stop-check.sh
lib/: bead.sh  bus-paths.sh  event-bus.sh  fleet-jq.sh  fleet-pane.sh  google-auth.sh.example  handoff.sh  harness-jq.sh  harness-launch.sh  pane-resolve.sh  resolve-deps.sh  resolve-registry.sh  session-reader.sh  spawn-sweep-agent.sh  sweep-config.sh  task-readiness.sh  worker-dispatch.sh  worker-seed.sh
mux/: test_claude_mux.py
notebooks/: hong-yang-findings.md  observation-001.md  ops-reflection.md
plugins/: .gitignore  CLAUDE.md  README.md
plugins/claude-context-orchestrator/scripts/snippets/: .gitignore  KEYWORDS.md  Makefile  README_TESTING.md  pyproject.toml  snippet_injector.py  test_snippets.py
plugins/claude-context-orchestrator/scripts/snippets/local/productivity/pbcopy/: SNIPPET.md
plugins/claude-context-orchestrator/scripts/snippets/snippets/: cli.py  client.py  models.py
plugins/claude-context-orchestrator/scripts/snippets/snippets/helpers/cli/: __init__.py  colors.py  output.py  typer_extras.py  validation.py
plugins/claude-context-orchestrator/scripts/snippets/snippets/helpers/core/: __init__.py  config.py  hashing.py  paths.py
plugins/claude-context-orchestrator/scripts/snippets/snippets/validators/: __init__.py  patterns.py  snippets.py
plugins/claude-context-orchestrator/scripts/snippets/tests/: test_cli_update.py  test_client.py  test_helpers_core.py  test_search_integration.py  test_validators.py
plugins/gmail-plugin/scripts/gmaillm/: .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  FIXES_APPLIED.md  LICENSE  Makefile  PLUGIN_CREDENTIALS.md  README.md  TESTING.md  TEST_FINDINGS.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
plugins/gmail-plugin/scripts/gmaillm/claude_files/: gmail-reflection-2025-11-07.md
plugins/gmail-plugin/scripts/gmaillm/docs/: GMAIL_API_QUIRKS.md  MYPY_SETUP.md  README.md  TESTING_STRATEGY.md  email-groups.md
plugins/gmail-plugin/scripts/gmaillm/gmaillm/: __init__.py  agent.py  cli.py  config.py  formatters.py  gmail_client.py  models.py  setup_auth.py  utils.py  workflow_config.py  workflow_state.py
plugins/gmail-plugin/scripts/gmaillm/gmaillm/commands/: ask.py  config.py  groups.py  labels.py  styles.py  workflows.py
plugins/gmail-plugin/scripts/gmaillm/gmaillm/helpers/: __init__.py
plugins/gmail-plugin/scripts/gmaillm/gmaillm/helpers/cli/: __init__.py  errors.py  interaction.py  preview.py  typer_extras.py  ui.py  validation.py
plugins/gmail-plugin/scripts/gmaillm/gmaillm/helpers/core/: __init__.py  io.py  paths.py
plugins/gmail-plugin/scripts/gmaillm/gmaillm/helpers/domain/: __init__.py  email_parser.py  groups.py  styles.py
plugins/gmail-plugin/scripts/gmaillm/gmaillm/validators/: email.py  email_operations.py  groups.py  runtime.py  styles.py
plugins/gmail-plugin/scripts/gmaillm/scripts/: README.md  email_notifier.py  inbox_cleanup.py  process_workflow.py  test_scripts.py
plugins/gmail-plugin/scripts/gmaillm/test_results/: ANALYSIS.md  SUMMARY.md  headless_test1.txt  headless_test2.txt  headless_test3.txt  headless_test5.txt  headless_test6.txt  headless_test7.txt  headless_test8.txt  test10_validate.txt  test2_show_without_hash.txt  test4_list_groups.txt  test5_dry_run.txt  test7_styles_list.txt  test9_json_output.txt  test_plan.md  test_prompts.txt
plugins/gmail-plugin/scripts/gmaillm/tests/: __init__.py  conftest.py  test_agent.py  test_ask_command.py  test_cli.py  test_cli_send_reply_extended.py  test_cli_thread_status.py  test_commands_config.py  test_commands_groups.py  test_commands_labels.py  test_commands_workflows.py  test_config_extended.py  test_core_commands.py  test_email_body_parser.py  test_formatters.py  test_gmail_client.py  test_helpers_config.py  test_helpers_domain_styles.py  test_helpers_json_input.py  test_models.py  test_send_preview_confirm.py  test_typer_extras.py  test_utils.py  test_utils_extended.py  test_validators_email.py  test_validators_email_operations.py  test_validators_groups.py  test_validators_runtime.py  test_validators_styles.py  test_validators_styles_json.py  test_workflow_config.py  test_workflow_state.py  test_workflows_claude.py
programs/: CLAUDE.md  bench-loop.program.ts  bench-pipeline.program.ts  deep-review.program.ts  dx-feedback.program.ts  dx-guard.program.ts  eval-loop.program.ts  greenfield-harden.program.ts  research-lab.program.ts
scripts/: broadcast-chain.sh  broadcast.sh  check-docs.sh  check-flat-workers.sh  check-templates.sh  child-exit.sh  codex-git-safety-hook.sh  control-plane.sh  deep-review.sh  dx-feedback-gate.ts  dx-feedback-proof.sh  fleet-health.sh  fleet-message.sh  fork-worker.sh  harness-api.ts  harness-health.sh  harness-watchdog.sh  init-project.sh  launch-flat-worker.sh  launch-moltbook-poster.sh  launch-test-watcher.sh  lint-hooks.sh  merge-trigger-watchdog.sh  migrate-agent-workspaces.sh  monitor-agent.sh  move-to-bg.sh  pre-compact.sh  register-pane.sh  review.sh  scaffold-conv-monitor.sh  scaffold.sh  statusline-command.sh  test-enforce-window.sh  tmux-fleet-status.sh  tmux-harness-summary.sh  verification-hash.sh  worker-bus-emit.sh  worker-commit-msg-hook.sh  worker-commit.sh  worker-inbox.sh  (+7 more)
shared/: extensions.ts  (+2 more)
(+605 files in other folders)
