[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snippets-cli"
version = "2.0.0"
description = "CLI for managing Claude Code snippets with search and validation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Warren Zhu", email = "wzhu@college.harvard.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "PyYAML>=6.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
]

[project.scripts]
snippets = "snippets.cli:main"

[project.urls]
Homepage = "https://github.com/wzhu/claude-context-orchestrator"

[tool.setuptools]
packages = { find = {} }
package-dir = {"" = "."}

# Ruff configuration (modern Python linter)
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
]
ignore = [
    "E501",    # line too long
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "B904",    # raise from exception
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E", "W", "F"]  # Relax for tests

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "-v",
    "--tb=short",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
]
